app/lib/src/engine/generated/onebeat_bindings.dart


  static ob_status fromValue(int value) => switch (value) {
    0 => OB_OK,
    1 => OB_ERR_INVALID_ARGUMENT,
    2 => OB_ERR_OUT_OF_MEMORY,
    3 => OB_ERR_DEVICE_UNAVAILABLE,
    4 => OB_ERR_DEVICE_FORMAT_UNSUPPORTED,
    5 => OB_ERR_ALREADY_RUNNING,
    6 => OB_ERR_NOT_RUNNING,
    7 => OB_ERR_QUEUE_FULL,
    8 => OB_ERR_FILE_NOT_FOUND,
    9 => OB_ERR_FILE_UNSUPPORTED,
    10 => OB_ERR_INTERNAL,
    _ => throw ArgumentError('Unknown value for ob_status: $value'),
  };
}

final class ob_engine extends ffi.Opaque {}

final class ob_engine_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Double()
  external double sample_rate;

  @ffi.Int32()
  external int block_frames;

  @ffi.Int32()
  external int use_null_device;

  external ffi.Pointer<ffi.Char> log_directory;
}

enum ob_command_type {
  OB_CMD_NONE(0),
  OB_CMD_TRANSPORT_PLAY(1),
  OB_CMD_TRANSPORT_STOP(2),
  OB_CMD_TRANSPORT_SEEK_FRAMES(3),
  OB_CMD_TRANSPORT_SEEK_BEATS(4),
  OB_CMD_SET_TEMPO(5),
  OB_CMD_SET_LOOP(6),
  OB_CMD_NOTE_ON(7),
  OB_CMD_NOTE_OFF(8),
  OB_CMD_ALL_NOTES_OFF(9),
  OB_CMD_SET_MASTER_GAIN(10),
  OB_CMD_PLUGIN_PARAM_BEGIN(11),
  OB_CMD_PLUGIN_PARAM_VALUE(12),
  OB_CMD_PLUGIN_PARAM_END(13);

  final int value;
  const ob_command_type(this.value);

  static ob_command_type fromValue(int value) => switch (value) {
    0 => OB_CMD_NONE,
    1 => OB_CMD_TRANSPORT_PLAY,
    2 => OB_CMD_TRANSPORT_STOP,
    3 => OB_CMD_TRANSPORT_SEEK_FRAMES,
    4 => OB_CMD_TRANSPORT_SEEK_BEATS,
    5 => OB_CMD_SET_TEMPO,
    6 => OB_CMD_SET_LOOP,
    7 => OB_CMD_NOTE_ON,
    8 => OB_CMD_NOTE_OFF,
    9 => OB_CMD_ALL_NOTES_OFF,
    10 => OB_CMD_SET_MASTER_GAIN,
    11 => OB_CMD_PLUGIN_PARAM_BEGIN,
    12 => OB_CMD_PLUGIN_PARAM_VALUE,
    13 => OB_CMD_PLUGIN_PARAM_END,
    _ => throw ArgumentError('Unknown value for ob_command_type: $value'),
  };
}

final class ob_command extends ffi.Struct {
  @ffi.Uint32()
  external int type;

  @ffi.Uint32()
  external int generation;

  @ffi.Int64()
  external int i64_a;

  @ffi.Double()
  external double f64_a;

  @ffi.Double()
  external double f64_b;
}

final class ob_snapshot extends ffi.Struct {
  @ffi.Uint32()
  external int struct_version;

  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int playing;

  @ffi.Uint32()
  external int loop_enabled;

  @ffi.Int64()
  external int position_frames;

  @ffi.Uint64()
  external int host_time_ns;

  @ffi.Uint64()
  external int callback_count;

  @ffi.Uint64()
  external int xrun_count;

  @ffi.Uint64()
  external int dropped_log_records;

  @ffi.Uint64()
  external int last_command_generation;

  @ffi.Double()
  external double position_beats;

  @ffi.Double()
  external double position_seconds;

  @ffi.Double()
  external double tempo_bpm;

  @ffi.Double()
  external double loop_start_beats;

  @ffi.Double()
  external double loop_end_beats;

  @ffi.Double()
  external double sample_rate;

  @ffi.Int32()
  external int bar;

  @ffi.Int32()
  external int beat;

  @ffi.Int32()
  external int tick;

  @ffi.Int32()
  external int block_frames;

  @ffi.Int32()
  external int active_voices;

  @ffi.Int32()
  external int latency_frames_output;

  @ffi.Int32()
  external int latency_frames_roundtrip;

  @ffi.Int32()
  external int schedule_event_count;

  @ffi.Float()
  external double peak_left;

  @ffi.Float()
  external double peak_right;

  @ffi.Float()
  external double rms_left;

  @ffi.Float()
  external double rms_right;

  @ffi.Float()
  external double cpu_load;

  @ffi.Float()
  external double master_gain;
}

enum ob_event_type {
  OB_EVT_NONE(0),
  OB_EVT_DEVICE_CHANGED(1),
  OB_EVT_DEVICE_LOST(2),
  OB_EVT_ERROR(3),
  OB_EVT_SAMPLE_LOADED(4),
  OB_EVT_XRUN(5),
  OB_EVT_SCHEDULE_PUBLISHED(6);

  final int value;
  const ob_event_type(this.value);

  static ob_event_type fromValue(int value) => switch (value) {
    0 => OB_EVT_NONE,
    1 => OB_EVT_DEVICE_CHANGED,
    2 => OB_EVT_DEVICE_LOST,
    3 => OB_EVT_ERROR,
    4 => OB_EVT_SAMPLE_LOADED,
    5 => OB_EVT_XRUN,
    6 => OB_EVT_SCHEDULE_PUBLISHED,
    _ => throw ArgumentError('Unknown value for ob_event_type: $value'),
  };
}

final class ob_event extends ffi.Struct {
  @ffi.Uint32()
  external int type;

  @ffi.Int32()
  external int code;

  @ffi.Int64()
  external int i64_a;

  @ffi.Double()
  external double f64_a;

  @ffi.Array.multi([96])
  external ffi.Array<ffi.Char> text;
}

enum ob_scan_state {
  OB_SCAN_IDLE(0),
  OB_SCAN_DISCOVERING(1),
  OB_SCAN_PROBING(2),
  OB_SCAN_COMPLETE(3),
  OB_SCAN_CANCELLED(4);

  final int value;
  const ob_scan_state(this.value);

  static ob_scan_state fromValue(int value) => switch (value) {
    0 => OB_SCAN_IDLE,
    1 => OB_SCAN_DISCOVERING,
    2 => OB_SCAN_PROBING,
    3 => OB_SCAN_COMPLETE,
    4 => OB_SCAN_CANCELLED,
    _ => throw ArgumentError('Unknown value for ob_scan_state: $value'),
  };
}

enum ob_plugin_format {
  OB_PLUGIN_FORMAT_UNKNOWN(0),
  OB_PLUGIN_FORMAT_BUILTIN(1),
  OB_PLUGIN_FORMAT_CLAP(2),
  OB_PLUGIN_FORMAT_VST3(3),
  OB_PLUGIN_FORMAT_AU(4);

  final int value;
  const ob_plugin_format(this.value);

  static ob_plugin_format fromValue(int value) => switch (value) {
    0 => OB_PLUGIN_FORMAT_UNKNOWN,
    1 => OB_PLUGIN_FORMAT_BUILTIN,
    2 => OB_PLUGIN_FORMAT_CLAP,
    3 => OB_PLUGIN_FORMAT_VST3,
    4 => OB_PLUGIN_FORMAT_AU,
    _ => throw ArgumentError('Unknown value for ob_plugin_format: $value'),
  };
}

enum ob_scan_outcome {
  OB_SCAN_OK(0),
  OB_SCAN_NOT_A_PLUGIN(1),
  OB_SCAN_CRASHED(2),
  OB_SCAN_TIMED_OUT(3);

  final int value;
  const ob_scan_outcome(this.value);

  static ob_scan_outcome fromValue(int value) => switch (value) {
    0 => OB_SCAN_OK,
    1 => OB_SCAN_NOT_A_PLUGIN,
    2 => OB_SCAN_CRASHED,
    3 => OB_SCAN_TIMED_OUT,
    _ => throw ArgumentError('Unknown value for ob_scan_outcome: $value'),
  };
}

enum ob_scan_phase {
  OB_SCAN_PHASE_NONE(0),
  OB_SCAN_PHASE_SPAWN(1),
  OB_SCAN_PHASE_LOAD(2),
  OB_SCAN_PHASE_ENUMERATE(3),
  OB_SCAN_PHASE_INSTANTIATE(4),
  OB_SCAN_PHASE_DONE(5);

  final int value;
  const ob_scan_phase(this.value);

  static ob_scan_phase fromValue(int value) => switch (value) {
    0 => OB_SCAN_PHASE_NONE,
    1 => OB_SCAN_PHASE_SPAWN,
    2 => OB_SCAN_PHASE_LOAD,
    3 => OB_SCAN_PHASE_ENUMERATE,
    4 => OB_SCAN_PHASE_INSTANTIATE,
    5 => OB_SCAN_PHASE_DONE,
    _ => throw ArgumentError('Unknown value for ob_scan_phase: $value'),
  };
}

final class ob_plugin_scan_status extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int state;

  @ffi.Uint32()
  external int bundles_discovered;

  @ffi.Uint32()
  external int bundles_reused;

  @ffi.Uint32()
  external int bundles_probed;

  @ffi.Uint32()
  external int plugins_found;

  @ffi.Uint32()
  external int plugin_count;

  @ffi.Uint32()
  external int list_generation;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> current;
}

final class ob_plugin_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int outcome;

  @ffi.Uint32()
  external int flags;

  @ffi.Uint32()
  external int features;

  @ffi.Uint32()
  external int param_count;

  @ffi.Uint32()
  external int index_in_bundle;

  @ffi.Uint32()
  external int audio_input_count;

  @ffi.Uint32()
  external int audio_output_count;

  @ffi.Uint32()
  external int note_input_count;

  @ffi.Uint32()
  external int note_output_count;

  @ffi.Uint32()
  external int padding_;

  @ffi.Int64()
  external int scanned_at_nanos;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> id;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> name;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> vendor;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> version;

  @ffi.Array.multi([512])
  external ffi.Array<ffi.Char> path;

  @ffi.Uint32()
  external int failure_phase;

  @ffi.Uint32()
  external int failure_signal;

  @ffi.Uint32()
  external int retry_count;
}

final class ob_instance_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int instance_id;

  @ffi.Uint32()
  external int format;

  @ffi.Uint32()
  external int flags;

  @ffi.Uint32()
  external int param_count;

  @ffi.Uint32()
  external int reserved;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> plugin_id;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> name;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> vendor;

  @ffi.Array.multi([512])
  external ffi.Array<ffi.Char> path;
}

final class ob_param_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int instance_id;

  @ffi.Uint32()
  external int param_id;

  @ffi.Uint32()
  external int flags;

  @ffi.Double()
  external double min_value;

  @ffi.Double()
  external double max_value;

  @ffi.Double()
  external double default_value;

  @ffi.Double()
  external double value;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> name;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> module;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> display;
}

final class ob_instrument_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Int32()
  external int order;

  @ffi.Uint32()
  external int flags;

  @ffi.Uint32()
  external int affected_pattern_count;

  @ffi.Uint32()
  external int affected_clip_count;

  @ffi.Uint32()
  external int affected_note_count;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> id;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> name;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> color;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> plugin_id;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> plugin_name;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> plugin_vendor;

  @ffi.Array.multi([512])
  external ffi.Array<ffi.Char> plugin_path;
}

final class ob_rack_pattern_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Int64()
  external int length_ticks;

  @ffi.Int64()
  external int base_grid_ticks;

  @ffi.Double()
  external double swing;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> id;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> name;
}

final class ob_rack_row_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int flags;

  @ffi.Int64()
  external int grid_ticks;

  @ffi.Int32()
  external int step_count;

  @ffi.Uint32()
  external int note_count;

  @ffi.Uint32()
  external int off_grid_count;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> instrument_id;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Uint8> step_active;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Uint16> step_velocity;
}

const int OB_ABI_VERSION_MAJOR = 1;

const int OB_ABI_VERSION_MINOR = 6;

const int OB_ABI_VERSION_PATCH = 0;

const int OB_ABI_VERSION_PACKED = 67072;

const int OB_SNAPSHOT_VERSION = 1;

const int OB_PLUGIN_FLAG_INTROSPECTED = 1;

const int OB_INSTANCE_FLAG_MISSING = 1;

const int OB_INSTANCE_FLAG_BYPASSED = 2;

const int OB_INSTANCE_FLAG_HAS_EDITOR = 4;

const int OB_INSTANCE_FLAG_NEEDS_RESTART = 8;

const int OB_RACK_MAX_STEPS = 256;
